applications/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - id.d3adb5.net
      secretName: keycloak-tls
  rules:
    - host: id.d3adb5.net
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8443
